k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-python-deployment
  labels:
    app: platform-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-python
  template:
    metadata:
      labels:
        app: platform-python
    spec:
      containers:
      - name: platform-python
        image: arunkumar1418/platform-python-app:6c2402b
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /api/v1/healthz
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v1/details
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 3
