k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-python-svc
  labels:
    app: platform-python
spec:
    ports:
      - port: 80
        targetPort: 5000
        protocol: TCP
    selector:
      app: platform-python
