k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-python
spec:
  ingressClassName: nginx
  rules:
  - host: "platform-python.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platform-python-svc
            port:
              number: 80
